# ddd-fast-api-test

./: Makefile  README.md  docker-compose.yml
core-api/: Dockerfile  README.md  app.py  main.py  pyproject.toml
core-api/presentation/: routes.py
core-api/presentation/routes/: api.py
