[project]
name = "core-api"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "fumiakikobayashi", email = "vbxy95xwy@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "uvicorn>=0.30.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["ruff>=0.4.9", "pytest>=8.2.2"]
